methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:9: error: not found: value leveBrose
  leveBrose()
  ^