methods.picture.PictureMono1.scala.code
override def run() {
  for (i<-1 to 4){
    faireV()
    gauche()
  }
}
def marque(){
  baisseBrosse()
  leveBrose()
}
def faireV(){
  avance(2)
  marque()
  gauche()
  avance()
  droite()
  avance()
  marque()
  droite()
  avance()
  gauche()
  avance()
  marque()
  avance(2)
}